--- a/src/UrlShortener.Api/UrlShortener.Api.csproj
+++ b/src/UrlShortener.Api/UrlShortener.Api.csproj
@@ -6,10 +6,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.15" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.15">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\UrlShortener.Application\UrlShortener.Application.csproj" />
     </ItemGroup>
 
 </Project>
