--- a/src/UrlShortener.Application/UrlShortener.Application.csproj
+++ b/src/UrlShortener.Application/UrlShortener.Application.csproj
@@ -4,4 +4,16 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Interfaces" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\UrlShortener.Persistence\UrlShortener.Persistence.csproj" />
+    </ItemGroup>
+
 </Project>
