--- a/src/UrlShortener.Persistence/UrlShortener.Persistence.csproj
+++ b/src/UrlShortener.Persistence/UrlShortener.Persistence.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.15" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\UrlShortener.Domain\UrlShortener.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
