--- a/src/UrlShortener.Api/appsettings.json
+++ b/src/UrlShortener.Api/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiAddress": "https://localhost:5001"
 }
